--- a/style-business-services.css
+++ b/style-business-services.css
@@ -41,8 +41,19 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
+  height: 60%;
   background-attachment: scroll;
+}
+
+.nav-link-btn-company-bottom-nav{
+  color: #000;
+  transform: color;
+  transition-duration: 500ms;
+}
+.nav-link-btn-company-bottom-nav:hover{
+  color: #ea7b6a;
+  transform: color;
+  transition-duration: 500ms;
 }
 
 @keyframes glow-flex{
@@ -117,22 +128,6 @@ body, html {
   background-image: url("Images/img6.jpg");
 }
 
-.caption {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  width: 100%;
-  text-align: center;
-  color: #000;
-}
-
-.caption span.border-business {
-  color: #af4332;
-  font-weight: bold;
-  padding: 18px;
-  font-size: 25px;
-  letter-spacing: 10px;
-}
 
 h3 {
   letter-spacing: 5px;
