--- a/Services_intro_css/demo.css
+++ b/Services_intro_css/demo.css
@@ -1,86 +1,80 @@
-@import url('https://fonts.googleapis.com/css?family=Pacifico|Rock+Salt');
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One|Francois+One|Play');
 
 html, body, section {
     height: 100%;
 }
-
 body {
     color: #fff;
     text-align: center;
 }
-
-.xop-container {
-    display: flex;
-}
-
 div {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-
+.xop-container {
+    display: flex;
+}
+div {
+    flex-direction: column;
+    justify-content: center;
+}
+ 
 .xop-left {
-    background: linear-gradient(rgba(0,0,0,0.85), rgba(255,255,255,0.10)),
-        url(Buisness.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(255, 255, 225, 0.10)), url(Buisness.jpg);
     background-size: cover;
     background-position: center;
     flex: 1;
     padding: 1rem;
     transition: all .2s ease-in-out;
+  text-transform: uppercase;
+  filter: grayscale(80%);
 }
-
+ 
 .xop-right {
-    background: linear-gradient(rgba(0,0,0,0.85), rgba(164,222,102, 0.10)),
-        url(IT.jpg);
-        background-size: cover;
-        background-position: center;
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(164, 222, 102, 0.10)), url(IT.jpg);
+    background-size: cover;
+    background-position: center;
     flex: 1;
     padding: 1rem;
     transition: all .2s ease-in-out;
+  text-transform: uppercase;
+  filter: hue-rotate(90deg);
 }
-
 .xop-left:hover, .xop-right:hover {
     transform: scale(0.95);
+  filter: hue-rotate(-90deg);
 }
-
-.xop-left h1 {
-    font-family: 'Rock Salt', cursive;
-    font-size: 6rem;
+.xop-container h1 {
+    letter-spacing: 2px;
+  font-family: 'Francois One', sans-serif;
+    font-size: 3rem;
 }
-
-.xop-right h1 {
-    font-family: 'Pacifico', cursive;
-    font-size: 6rem;
-}
-
 .xop-button {
-    border-radius: 30px;
+    border-radius: 2px;
     color: #fff;
-    background-color: #ea7e6e;
-    padding: 1.5%;
-    margin: 0 2%;
+    background-color: #333;
+    padding: 10px 6px;
+    margin: 0 1%;
     text-align: center;
+  font-family: 'Play', sans-serif;
     text-decoration: none;
-    font-weight: bold;
+  letter-spacing: 1px;
     display: inline-block;
-    font-size: 1.5rem;
+    font-size: 1rem;
     cursor: pointer;
-    transition: all 0.3s;
+    transition: all 0.5s;
     width: 150px;
 }
-
+ 
 .xop-button:hover {
-    background: #fcc567;
-    color: #fff;
+    background: #fff;
+    color: #333;
 }
 
+@media only screen and (max-width: 600px) {
+  .xop-container {
+    flex-direction: column;
+  }
 
-
-
-
-
-
-
-
-
-
+}
