--- a/style-business-services.css
+++ b/style-business-services.css
@@ -164,3 +164,16 @@ h3 {
 .text-center{
   text-align: center;
 }
+
+.collapse .navbar-nav .nav-item .nav-link {
+  color: black;
+}
+.collapse .navbar-nav .nav-item.active .nav-link,
+.collapse .navbar-nav .nav-item:hover .nav-link {
+  color: white;
+}
+
+.bg-none .navbar-collapse{
+  background-color: #ea7e6e;
+  z-index: 9;
+}
