--- a/Services_intro_css/demo.css
+++ b/Services_intro_css/demo.css
@@ -13,7 +13,7 @@ div {
     justify-content: center;
 }
 .xop-container {
-    display: flex;
+    display: grid;
 }
 div {
     flex-direction: column;
@@ -28,7 +28,7 @@ div {
     padding: 1rem;
     transition: all .2s ease-in-out;
   text-transform: uppercase;
-  filter: grayscale(80%);
+  filter: grayscale(20%);
 }
  
 .xop-right {
@@ -41,15 +41,27 @@ div {
   text-transform: uppercase;
   filter: hue-rotate(90deg);
 }
-.xop-left:hover, .xop-right:hover {
+
+.xop-left:hover{
     transform: scale(0.95);
-  filter: hue-rotate(-90deg);
+  filter: hue-rotate(-20deg);
 }
+
+.xop-right:hover{
+  transform: scale(0.95);
+  filter: hue-rotate(-50deg);
+}
+
 .xop-container h1 {
     letter-spacing: 2px;
   font-family: 'Francois One', sans-serif;
     font-size: 3rem;
 }
+
+.xop-container .navbar{
+  top: -40px;
+}
+
 .xop-button {
     border-radius: 2px;
     color: #fff;
@@ -80,9 +92,16 @@ div {
 }
 
 .navbar-nav .nav-item .nav-link {
-  color: black;
+  color: white;
 }
 .navbar-nav .nav-item.active .nav-link,
 .navbar-nav .nav-item:hover .nav-link {
   color: #ea7e6e;
+}
+
+@media (min-width: 992px){
+  .hero li {
+      margin-left : 3em;
+      margin-right : 3em;
+  }
 }
